    are directly pointed to by a start-pointer, were previously marked as
    "still reachable".  They are now correctly marked as "possibly lost".
  - The default value for the --leak-resolution option has been changed from
    "low" to "high".  In general, this means that more leak reports will be
    produced, but each leak report will describe fewer leaked blocks.
  - The documentation for the leak checker has also been improved.

* XXX: Atomic instructions are now handled properly...

* The format of some (non-XML) stack trace entries has changed a little.
  Previously there were six possible forms:

    0x80483BF: really (a.c:20)
    0x80483BF: really (in /foo/a.out)
    0x80483BF: really
    0x80483BF: (within /foo/a.out)
    0x80483BF: ??? (a.c:20)
    0x80483BF: ???

  The third and fourth of these forms have been made more consistent with
  the others.  The six possible forms are now:
  
    0x80483BF: really (a.c:20)
    0x80483BF: really (in /foo/a.out)
    0x80483BF: really (in ???)
    0x80483BF: ??? (in /foo/a.out)
    0x80483BF: ??? (a.c:20)
    0x80483BF: ???

  Stack traces produced when --xml=yes is specified are different and
  unchanged.

* XXX: XML output has changed... along with how --xml=yes works.

* The graphs drawn by Massif's ms_print program have changed slightly:
  - The half-height chars '.' and ',' are no longer drawn, because they are
    confusing.  The --y option can be used if the default y-resolution is
    not high enough.
  - Horizontal lines are now drawn after the top of a snapshot if there is a
    gap until the next snapshot.  This makes it clear that the memory
    usage has not dropped to zero between snapshots.

* New features and improvements in DRD:
  - The error messages printed by DRD are now easier to interpret. Instead of
    using two different numbers to identify each thread (Valgrind thread ID and
    DRD thread ID), DRD does now identify threads via a single number (the DRD